[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptoluggage"
version = "3.1.2"
description = "Cryptoluggage allows to keep encrypted secrets (e.g., passwords) and files"
readme = "README.md"
authors = [
    { name = "Miguel Hernández Cabronero", email = "miguel.hernandez@uab.cat" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = [
    "cryptography",
    "filelock",
    "sortedcontainers",
    "prompt_toolkit",
    "qrcode"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/miguelinux314/cryptoluggage"

[project.scripts]
cl = "cryptoluggage.__main__:__main__"
